# AI-Customer-ticket

./: .env  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 8f534c94284a_init_model.py
src/: api.py  main.py  security.py
src/database/: core.py
src/entities/: __init__.py  tickets.py  user.py
src/llm/: domain_guard.py  ollama_client.py  system_prompt.txt
src/ticket/: controller.py  models.py  service.py
src/user/: controller.py  models.py  service.py
