[project]
name = "ai-customer-ticket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.128.5",
    "passlib[bcrypt]>=1.7.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.3.0",
    "sqlalchemy>=2.0.46",
    "pyjwt>=2.11.0",
    "alembic>=1.18.3",
    "psycopg2>=2.9.11",
    "python-dotenv>=1.2.1",
]
